--- a/src/docs/asciidoc/slides.adoc
+++ b/src/docs/asciidoc/slides.adoc
@@ -1,10 +1,14 @@
 = A Browse Through ES6
 Jez Higgins, jez@jezuk.co.uk
+:revealjs_center: false
+:revealjs_progress: false
+
 include::slides/hello.adoc[]
 include::slides/context.adoc[]
 include::slides/shiny.adoc[]
 include::slides/using-now.adoc[]
 include::slides/future.adoc[]
 include::slides/thanks.adoc[]
+
 :imagesdir: images
 :sourcedir: snippets
