--- a/src/docs/asciidoc/slides/shiny.adoc
+++ b/src/docs/asciidoc/slides/shiny.adoc
@@ -1,4 +1,16 @@
 
+== But now we have ES6
+
+[%step]
+* ES6 fixes none of this
+
+* All your crappy JavaScript will continue to run
+
+
+[NOTE.speaker]
+--
+ES6, officially ECMAScript 6, as ratified as a standard by the good people of the European Computer Manufacturing Association on the 17 June 2015, fixes none of JavaScript's many shortcomings.  ES6 is a superset of ES5, nothing is removed.  Everything that currently runs as JavaScript will continue to run as JavaScript, even if we magically upgraded everybody's browser this evening.
+
 == Shiny New Stuff!
 
 Arrow functions
@@ -7,13 +19,13 @@ Block scope
 
 Modules
 
-Iterators 
+Iterators
   Generators
 
-Promises 
+Promises
   async, await
 
-Parameters 
+Parameters
   default parameters
   rest parameters
 
