Added placeholder files

--- a/src/docs/asciidoc/slides/shiny.adoc
+++ b/src/docs/asciidoc/slides/shiny.adoc
@@ -52,3 +52,6 @@ RegExps
 Loads!
 
 include::features/let-and-const.adoc[]
+include::features/loops.adoc[]
+include::features/destructure.adoc[]
+include::features/parameters.adoc[]
